# markov

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: HowItWorks.md  HowToBuild.md
perl/: markov.pl  test.sh
src/: htable.c  htable.h  log.c  log.h  log_priorities.h  markov.c  preftable.c  preftable.h  vector.c  vector.h  wordreader.c  wordreader.h
tests/: 01.tst
